--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -55,10 +55,10 @@ doctrine:
         charset:  UTF8
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
-        #     e.g. database_path: "%kernel.root_dir%/data/data.db3"
+        #     e.g. database_path: "%kernel.root_dir%/../var/data/data.sqlite"
         #   2. Uncomment database_path in parameters.yml.dist
         #   3. Uncomment next line:
-        #     path:     "%database_path%"
+        #path:     "%database_path%"
 
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
@@ -67,15 +67,15 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport:  "%mailer_transport%"
-    host:       "%mailer_host%"
-    username:   "%mailer_user%"
-    password:   "%mailer_password%"
+    transport: "%mailer_transport%"
+    host:      "%mailer_host%"
+    username:  "%mailer_user%"
+    password:  "%mailer_password%"
     port:       "%mailer_port%"
     auth_mode:  "%mailer_auth_mode%"
     encryption: "%mailer_encryption%"
     timeout:    "%mailer_timeout%"
-
+    spool:     { type: memory }
 lexik_translation:
     fallback_locale: [en]
     managed_locales: [en, fr, de]
