--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -2,12 +2,7 @@ imports:
     - { resource: config.yml }
 
 parameters:
-    httpProtocol: http
-#framework:
-#    validation:
-#        cache: validator.mapping.cache.doctrine.apc
-#    serializer:
-#        cache: serializer.mapping.cache.apc
+    httpProtocol: https
 
 #doctrine:
 #    orm:
